# par-term

./: .gitignore  AGENTS.md  AUDIT-REMEDIATION.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  GEMINI.md  MATRIX.md  MATRIX_VERIFICATION_REPORT.md  Makefile  PANES.md  QUICK_START_FONTS.md  README.md  SECURITY.md  audit.md  build.rs  deny.toml  ideas.md  install_shaders.sh  par-term.terminfo  run-steps.sh  shader_debug.md  test_cr.rs  test_grid.rs
.cargo/: config.toml
par-term-acp/: Cargo.toml  README.md
par-term-acp/src/: agent.rs  agents.rs  fs_ops.rs  fs_tools.rs  lib.rs  message_handler.rs  permissions.rs  protocol.rs  session.rs
par-term-acp/src/harness/: mod.rs  recovery.rs  transcript.rs
par-term-acp/src/protocol/: config_update.rs  content.rs  fs_ops.rs  initialize.rs  mod.rs  permissions.rs  session.rs
par-term-config/: Cargo.toml  README.md
par-term-config/src/: assistant_input_history.rs  assistant_prompts.rs  automation.rs  cell.rs  config.rs  defaults.rs  error.rs  layout_constants.rs  lib.rs  profile.rs  profile_types.rs  scripting.rs  scrollback_mark.rs  shader_bundle.rs  shader_config.rs  shader_controls.rs  shader_metadata.rs  shell_detection.rs  snapshot_types.rs  snippets.rs  status_bar.rs  themes.rs  types.rs  watcher.rs
par-term-config/src/config/: acp.rs  config_methods.rs  config_struct.rs  env_vars.rs  keybindings_methods.rs  mod.rs  path_validation.rs  persistence.rs  prettifier.rs  theme_methods.rs
par-term-config/src/defaults/: colors.rs  font.rs  misc.rs  mod.rs  shader.rs  terminal.rs  window.rs
par-term-config/src/profile_types/: dynamic.rs  matchers.rs  mod.rs  profile.rs
par-term-config/src/shader_metadata/: cache.rs  mod.rs  parsing.rs
par-term-config/src/types/: alert.rs  color.rs  font.rs  integration.rs  keybinding.rs  mod.rs  rendering.rs  selection.rs  shader.rs  shell.rs  tab_bar.rs  terminal.rs  unicode.rs
par-term-config/tests/: status_bar_widget_roundtrip.rs
par-term-fonts/: Cargo.toml  README.md
par-term-fonts/src/: lib.rs  text_shaper.rs
par-term-fonts/src/font_manager/: fallbacks.rs  mod.rs  types.rs
par-term-fonts/tests/: font_tests.rs
par-term-input/: Cargo.toml  README.md
par-term-input/src/: clipboard.rs  key_encoding.rs  lib.rs  modifiers.rs
par-term-keybindings/: Cargo.toml  README.md
par-term-keybindings/src/: lib.rs  matcher.rs  parser.rs  platform.rs
par-term-keybindings/tests/: keybinding_integration_tests.rs
par-term-mcp/: Cargo.toml  README.md
par-term-mcp/src/: ipc.rs  jsonrpc.rs  lib.rs
par-term-mcp/src/tools/: config_update.rs  diagnostics.rs  mod.rs  screenshot.rs
par-term-prettifier/: Cargo.toml  README.md
par-term-prettifier/src/: ansi_colors.rs  ansi_parser.rs  buffer.rs  cache.rs  claude_code.rs  claude_code_preview.rs  config.rs  config_bridge.rs  custom_renderers.rs  gutter.rs  lib.rs  registry.rs  testing.rs  traits.rs
par-term-prettifier/src/boundary/: detector.rs  mod.rs  tests.rs
par-term-prettifier/src/detectors/: csv.rs  diagrams.rs  diff.rs  json.rs  log.rs  markdown.rs  sql_results.rs  stack_trace.rs  toml.rs  xml.rs  yaml.rs
par-term-prettifier/src/pipeline/: mod.rs  pipeline_blocks.rs  pipeline_claude_code.rs  pipeline_impl.rs  render.rs  tests.rs
par-term-prettifier/src/regex_detector/: tests.rs
par-term-prettifier/src/renderers/: csv.rs  mod.rs  sql_results.rs  table.rs
par-term-render/: Cargo.toml  README.md
par-term-render/src/: error.rs  gpu_utils.rs  graphics_renderer.rs  lib.rs  scrollbar.rs  wgpu_conversions.rs
par-term-render/src/cell_renderer/: atlas.rs  background.rs  bg_instance_builder.rs  block_chars.rs  cursor.rs  font.rs  instance_buffers.rs  instance_builders.rs  layout.rs  mod.rs  pane_render.rs  pipeline.rs  render.rs  settings.rs  surface.rs  text_instance_builder.rs  types.rs
par-term-render/src/custom_shader_renderer/: builtin_textures.rs  cubemap.rs  cursor.rs  hot_reload.rs  mod.rs  pipeline.rs  state.rs  textures.rs  transpiler.rs  types.rs  uniforms.rs
par-term-render/src/renderer/: accessors.rs  egui_render.rs  graphics.rs  mod.rs  params.rs  render_orchestrator.rs  render_passes.rs  rendering.rs  shaders.rs  state.rs
par-term-render/src/shaders/: background_image.wgsl  cell_bg.wgsl  cell_text.wgsl  opaque_alpha.wgsl  scrollbar.wgsl  visual_bell.wgsl
par-term-scripting/: Cargo.toml  README.md  SECURITY.md
par-term-scripting/src/: lib.rs  manager.rs  observer.rs  process.rs  protocol.rs
par-term-settings-ui/: Cargo.toml  README.md
par-term-settings-ui/src/: actions_tab.rs  advanced_tab.rs  ai_inspector_tab.rs  appearance_tab.rs  arrangements.rs  arrangements_tab.rs  automation_tab.rs  background_tab.rs  badge_tab.rs  cursor_shader_editor.rs  effects_tab.rs  input_tab.rs  integrations_tab.rs  lib.rs  nerd_font.rs  notifications_tab.rs  prettifier_tab.rs  profile_modal_ui.rs  profiles_tab.rs  progress_bar_tab.rs  quick_settings.rs  scripts_tab.rs  search_keywords.rs  section.rs  shader_dialogs.rs  shader_editor.rs  shader_utils.rs  shell_detection.rs  sidebar.rs  snippets_tab.rs  ssh_tab.rs  status_bar_tab.rs  terminal_tab.rs  traits.rs  window_tab.rs
par-term-settings-ui/src/actions_tab/: action_editor.rs  action_forms.rs  action_list.rs  mod.rs
par-term-settings-ui/src/advanced_tab/: import_export.rs  logging.rs  mod.rs  system.rs  tmux.rs
par-term-settings-ui/src/ai_inspector_tab/: agent_config_section.rs  context_section.rs  mod.rs  prompt_library.rs
par-term-ssh/: Cargo.toml  README.md
par-term-ssh/src/: config_parser.rs  discovery.rs  history.rs  known_hosts.rs  lib.rs  mdns.rs
par-term-terminal/: Cargo.toml  README.md
par-term-terminal/src/: conversion.rs  lib.rs  scrollback_metadata.rs  styled_content.rs
par-term-tmux/: Cargo.toml  README.md
par-term-tmux/src/: commands.rs  lib.rs  pane_sync.rs  parser_bridge.rs  prefix.rs  session.rs  status_format.rs  sync.rs  window_sync.rs
par-term-update/: Cargo.toml  README.md
par-term-update/src/: binary_ops.rs  http.rs  install_methods.rs  lib.rs  manifest.rs  self_updater.rs  update_checker.rs
(+1168 files in other folders)
