[workspace]
members = ["par-term-acp", "par-term-config", "par-term-fonts", "par-term-input", "par-term-keybindings", "par-term-mcp", "par-term-render", "par-term-scripting", "par-term-settings-ui", "par-term-ssh", "par-term-terminal", "par-term-tmux", "par-term-update"]
resolver = "2"

[package]
name = "par-term"
version = "0.19.0"
edition = "2024"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Cross-platform GPU-accelerated terminal emulator with inline graphics support (Sixel, iTerm2, Kitty)"
readme = "README.md"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
documentation = "https://github.com/paulrobello/par-term/blob/main/README.md"
keywords = ["terminal", "emulator", "tui", "gpu", "graphics"]
categories = ["command-line-utilities", "gui"]
default-run = "par-term"
exclude = [
    "*.sixel",
    "images/",
    "test_*.rs",
    ".github/",
    ".gitignore",
    "CLAUDE.md",
    "GEMINI.md",
    "AGENTS.md",
    "MATRIX.md",
    "PANES.md",
    "agents/",
    "gh-pages/",
    "shaders/textures/",
    "assets/par-term.icns",
    "docs/plans/",
    ".claude/",
]

[dependencies]
# ACP (Agent Communication Protocol) implementation
par-term-acp = { path = "par-term-acp", version = "0.1.1" }

# Configuration system
par-term-config = { path = "par-term-config", version = "0.2.0", features = ["watcher", "wgpu-types"] }

# Font management and text shaping
par-term-fonts = { path = "par-term-fonts", version = "0.1.2" }

# Terminal manager (PTY, shell integration, scrollback)
par-term-terminal = { path = "par-term-terminal", version = "0.1.2" }

# GPU-accelerated rendering engine
par-term-render = { path = "par-term-render", version = "0.2.0" }

# Settings UI (egui-based settings interface)
par-term-settings-ui = { path = "par-term-settings-ui", version = "0.2.0" }

# Input sequence generation (keyboard/mouse → VT escape sequences)
par-term-input = { path = "par-term-input", version = "0.1.2" }

# Keybinding system (key parsing, matching, registry)
par-term-keybindings = { path = "par-term-keybindings", version = "0.1.2" }

# Scripting and observer system
par-term-scripting = { path = "par-term-scripting", version = "0.1.2" }

# SSH host management and discovery
par-term-ssh = { path = "par-term-ssh", version = "0.1.1" }

# Self-update and update-check system
par-term-update = { path = "par-term-update", version = "0.1.2" }

# MCP (Model Context Protocol) stdio server
par-term-mcp = { path = "par-term-mcp", version = "0.1.1" }

# tmux control mode integration
par-term-tmux = { path = "par-term-tmux", version = "0.1.2" }

# Terminal emulator core (with OSC 7/1337 hostname/cwd events, RemoteHost, and OSC 934 named progress bars)
par-term-emu-core-rust = { version = "0.39.1", default-features = false, features = ["rust-only"] }

# Window management and rendering
winit = "0.30"
wgpu = { version = "27", features = ["wgsl"] }
bytemuck = { version = "1.25", features = ["derive"] }
swash = "0.2.6"  # Font rasterization with colored glyph support
fontdb = "0.23"  # Font database for system font discovery and fallback
rustybuzz = "0.20.1"  # HarfBuzz text shaping for ligatures and complex scripts
unicode-segmentation = "1.12"  # Grapheme cluster detection for proper text boundaries
parking_lot = "0.12.5"

# Async runtime for PTY handling
tokio = { version = "1.49", features = ["full"] }

# Configuration
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
toml = "0.8"

# UUID for profile identifiers
uuid = { version = "1.21", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0.101"

# Logging
log = "0.4.29"

# Platform-specific directories
dirs = "6.0"

# Clipboard support
arboard = "3.6.1"

# URL detection and opening
regex = "1.12.3"
open = "5.3.3"  # Cross-platform URL opener

# Audio playback for bell sound
rodio = "0.21.1"

# Desktop notifications
notify-rust = "4.12"

# GUI for settings interface
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
rfd = "0.17.2"

# Date/time for screenshots
chrono = "0.4.43"

# Image loading for background images
image = "0.25.9"

# Half-precision float for HDR cubemap textures
half = "2.7.1"

# GLSL to WGSL transpilation for custom shaders
naga = { version = "27", features = ["glsl-in", "wgsl-out"] }

# Native window menus
muda = "0.17.1"
libc = "0.2.182"
clap = { version = "4.5.59", features = ["derive"] }
ureq = { version = "3.2.0", default-features = false, features = ["native-tls", "gzip"] }
# Pin native-tls to 0.2.16 — 0.2.17 added Protocol::Tlsv13 but its OpenSSL
# backend has non-exhaustive match arms, causing compile errors on Linux.
# Remove once upstream native-tls releases a fix.
native-tls = "=0.2.16"
zip = "8.1.0"
semver = "1.0.27"  # Semantic version parsing for update checks
sha2 = "0.10.9"

# Badge system
hostname = "0.4.2"  # Cross-platform hostname detection
base64 = "0.22.1"   # Base64 decoding for OSC 1337 SetBadgeFormat
flate2 = "1.1.9"    # Gzip compression for upload tar.gz archives
tar = "0.4.44"      # Tar archive creation for upload (iTerm2 tgz format)
lru = "0.16.3"
fuzzy-matcher = "0.3.7"  # Fuzzy string matching for command history search
sysinfo = "0.37.2"  # Cross-platform CPU/memory/network monitoring for status bar
mdns-sd = "0.18"  # mDNS/Bonjour service discovery for SSH host auto-detection

# Linux-specific: GTK for native menus (muda requires gtk feature on Linux)
[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies.muda]
version = "0.17.1"
features = ["gtk"]

# macOS-specific: Access CAMetalLayer for performance optimization
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
raw-window-handle = "0.6.2"

# File watching for shader hot reload - platform-specific backends
# macOS: use kqueue for better performance
[target.'cfg(target_os = "macos")'.dependencies.notify]
version = "8.2"
default-features = false
features = ["macos_kqueue"]

# Windows/Linux: use default backends (ReadDirectoryChangesW on Windows, inotify on Linux)
[target.'cfg(not(target_os = "macos"))'.dependencies.notify]
version = "8.2"

[dev-dependencies]
tempfile = "3.25"

# Windows resources (icon embedding)
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[lib]
name = "par_term"
path = "src/lib.rs"

[[bin]]
name = "par-term"
path = "src/main.rs"

[features]
dev-tools = []  # Enable to build test-cr and test-grid utilities

[[bin]]
name = "test-cr"
path = "test_cr.rs"
required-features = ["dev-tools"]

[[bin]]
name = "test-grid"
path = "test_grid.rs"
required-features = ["dev-tools"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Fast optimized builds for day-to-day development and testing.
# Use `cargo build --profile dev-release` or `make fast-release`.
# ~30-40s vs ~3min for full release. Performance is ~95% of release.
[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 16

[profile.dev]
opt-level = 0
debug = true

