[workspace]
members = ["par-term-acp", "par-term-config", "par-term-fonts", "par-term-input", "par-term-keybindings", "par-term-mcp", "par-term-prettifier", "par-term-render", "par-term-scripting", "par-term-settings-ui", "par-term-ssh", "par-term-terminal", "par-term-tmux", "par-term-update"]
resolver = "2"

# ---------------------------------------------------------------------------
# Workspace-level dependency declarations (ARC-001)
# Centralise all external deps shared across 2+ crates here.
# Sub-crates opt in with `dep.workspace = true` and may append extra features
# via `dep = { workspace = true, features = ["extra"] }`.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Terminal emulator core
par-term-emu-core-rust = { version = "0.41.0", default-features = false, features = ["rust-only"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
toml = "1.0"

# UUID
uuid = { version = "1.22", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0.101"
thiserror = "2"

# Logging
log = "0.4.29"

# Platform-specific directories
dirs = "6.0"

# Concurrency
parking_lot = "0.12.5"

# Window management
winit = "0.30"

# GPU rendering
wgpu = { version = "27", features = ["wgsl"] }
bytemuck = { version = "1.25", features = ["derive"] }
naga = { version = "27", features = ["glsl-in", "wgsl-out"] }
half = "2.7.1"

# Font handling
swash = "0.2.6"
fontdb = "0.23"
rustybuzz = "0.20.1"
unicode-segmentation = "1.12"
lru = "0.16.3"

# GUI
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
rfd = "0.17.2"

# Image / media
image = "0.25.9"

# Shell / process
shell-words = "1.1"
arboard = "3.6.1"
open = "5.3.3"

# Network / HTTP
ureq = { version = "3.2.0", default-features = false, features = ["native-tls", "gzip"] }
native-tls = "0.2.18"
mdns-sd = "0.18"

# Date / time
chrono = "0.4.43"

# Text / regex
regex = "1.12.3"

# Versioning / crypto
semver = "1.0.27"
sha2 = "0.10.9"
zip = "8.1.0"

# Misc utilities
base64 = "0.22.1"
hostname = "0.4.2"
sysinfo = "0.37.2"

# File watching
notify = "8.2"

# Dev dependencies
tempfile = "3.25"

[package]
name = "par-term"
version = "0.26.0"
edition = "2024"
rust-version = "1.91"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Cross-platform GPU-accelerated terminal emulator with inline graphics support (Sixel, iTerm2, Kitty)"
readme = "README.md"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
documentation = "https://github.com/paulrobello/par-term/blob/main/README.md"
keywords = ["terminal", "emulator", "tui", "gpu", "graphics"]
categories = ["command-line-utilities", "gui"]
default-run = "par-term"
exclude = [
    "*.sixel",
    "images/",
    "test_*.rs",
    ".github/",
    ".gitignore",
    "CLAUDE.md",
    "GEMINI.md",
    "AGENTS.md",
    "MATRIX.md",
    "PANES.md",
    "agents/",
    "gh-pages/",
    "shaders/textures/",
    "assets/par-term.icns",
    "docs/plans/",
    ".claude/",
]

[dependencies]
# ACP (Agent Communication Protocol) implementation
par-term-acp = { path = "par-term-acp", version = "0.2.3" }

# Configuration system
par-term-config = { path = "par-term-config", version = "0.7.1", features = ["watcher", "wgpu-types"] }

# Content prettifier (Markdown, JSON, YAML, diffs, diagrams)
par-term-prettifier = { path = "par-term-prettifier", version = "0.1.2" }

# Font management and text shaping
par-term-fonts = { path = "par-term-fonts", version = "0.1.6" }

# Terminal manager (PTY, shell integration, scrollback)
par-term-terminal = { path = "par-term-terminal", version = "0.2.2" }

# GPU-accelerated rendering engine
par-term-render = { path = "par-term-render", version = "0.6.1" }

# Settings UI (egui-based settings interface)
par-term-settings-ui = { path = "par-term-settings-ui", version = "0.8.0" }

# Input sequence generation (keyboard/mouse → VT escape sequences)
par-term-input = { path = "par-term-input", version = "0.1.6" }

# Keybinding system (key parsing, matching, registry)
par-term-keybindings = { path = "par-term-keybindings", version = "0.1.7" }

# Scripting and observer system
par-term-scripting = { path = "par-term-scripting", version = "0.1.7" }

# SSH host management and discovery
par-term-ssh = { path = "par-term-ssh", version = "0.1.3" }

# Self-update and update-check system
par-term-update = { path = "par-term-update", version = "0.2.4" }

# MCP (Model Context Protocol) stdio server
par-term-mcp = { path = "par-term-mcp", version = "0.2.2" }

# tmux control mode integration
par-term-tmux = { path = "par-term-tmux", version = "0.1.7" }

# Terminal emulator core (with OSC 7/1337 hostname/cwd events, RemoteHost, and OSC 934 named progress bars)
par-term-emu-core-rust.workspace = true

# Window management and rendering
winit.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
swash.workspace = true         # Font rasterization with colored glyph support
fontdb.workspace = true        # Font database for system font discovery and fallback
rustybuzz.workspace = true     # HarfBuzz text shaping for ligatures and complex scripts
unicode-segmentation.workspace = true  # Grapheme cluster detection for proper text boundaries
parking_lot.workspace = true

# Async runtime for PTY handling
tokio.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true

# UUID for profile identifiers
uuid.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
log.workspace = true

# Platform-specific directories
dirs.workspace = true

# Clipboard support
arboard.workspace = true

# URL detection and opening
regex.workspace = true
open.workspace = true          # Cross-platform URL opener
shell-words.workspace = true   # Safe shell command parsing (prevents argument injection)

# Audio playback for bell sound
rodio = { version = "0.22.1", features = ["mp3"] }

# Desktop notifications
notify-rust = "4.12"

# GUI for settings interface
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
rfd.workspace = true

# Date/time for screenshots
chrono.workspace = true

# Image loading for background images
image.workspace = true

# Native Mermaid diagram rendering (pure Rust, zero external deps)
mermaid-rs-renderer = { version = "0.2", default-features = false }
# SVG rasterization for mermaid diagram PNG output
resvg = "0.47"

# Half-precision float for HDR cubemap textures
half.workspace = true

# GLSL to WGSL transpilation for custom shaders
naga.workspace = true

# Native window menus
muda = "0.17.1"
libc = "0.2.182"
clap = { version = "4.5.59", features = ["derive"] }
ureq.workspace = true
native-tls.workspace = true
zip.workspace = true
semver.workspace = true        # Semantic version parsing for update checks
sha2.workspace = true

# Badge system
hostname.workspace = true      # Cross-platform hostname detection
base64.workspace = true        # Base64 decoding for OSC 1337 SetBadgeFormat
flate2 = "1.1.9"               # Gzip compression for upload tar.gz archives
tar = "0.4.44"                 # Tar archive creation for upload (iTerm2 tgz format)
lru.workspace = true
fuzzy-matcher = "0.3.7"        # Fuzzy string matching for command history search
sysinfo = { workspace = true, features = ["system"] }  # Cross-platform CPU/memory/network monitoring for status bar
mdns-sd.workspace = true       # mDNS/Bonjour service discovery for SSH host auto-detection

# Linux-specific: GTK for native menus (muda requires gtk feature on Linux)
[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies.muda]
version = "0.17.1"
features = ["gtk"]

# macOS-specific: Access CAMetalLayer for performance optimization
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
raw-window-handle = "0.6.2"

# File watching for shader hot reload - platform-specific backends
# macOS: use FSEvents (default) — kqueue opens O_EVTONLY fds per file and
# bleeds into recursive directory watches when the shaders dir grows, exhausting
# the process file-descriptor limit.  FSEvents is path-based, opens no per-file
# fds, and is more efficient for watching config + shader directories.
[target.'cfg(target_os = "macos")'.dependencies.notify]
workspace = true

# Windows/Linux: use default backends (ReadDirectoryChangesW on Windows, inotify on Linux)
[target.'cfg(not(target_os = "macos"))'.dependencies.notify]
workspace = true

[dev-dependencies]
tempfile.workspace = true

# Windows resources (icon embedding)
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

# Integration tests live in tests/ as individual binaries (one per .rs file).
# Logical groupings by filename prefix:
#   script_*          — scripting engine tests (ScriptManager, observer, protocol, process)
#   shader_*          — shader configuration and hot-reload watcher tests
#   tab_*             — tab bar UI, color, and stability tests
#   *_notification_*  — activity and session notification tests
#   config_tests      — general configuration loading and validation
#   automation_*      — automation / trigger configuration tests
#
# Future: migrate each group into tests/<group>/mod.rs when the number of files
# in a group exceeds ~5, using the Rust 2018+ integration test submodule pattern.
[lib]
name = "par_term"
path = "src/lib.rs"

[[bin]]
name = "par-term"
path = "src/main.rs"

[features]
dev-tools = []  # Enable to build test-cr and test-grid utilities

[[bin]]
name = "test-cr"
path = "src/bin/test_cr.rs"
required-features = ["dev-tools"]

[[bin]]
name = "test-grid"
path = "src/bin/test_grid.rs"
required-features = ["dev-tools"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Fast optimized builds for day-to-day development and testing.
# Use `cargo build --profile dev-release` or `make fast-release`.
# ~30-40s vs ~3min for full release. Performance is ~95% of release.
[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 16

[profile.dev]
opt-level = 0
debug = true

