[package]
name = "par-term-config"
version = "0.10.1"
edition = "2024"
rust-version = "1.94"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Configuration system for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "config", "configuration"]
categories = ["config"]

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true

# UUID for profile identifiers
uuid.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
log.workspace = true

# Platform-specific directories
dirs.workspace = true

# Regex for variable substitution
regex.workspace = true

# File watching for config hot reload
notify = { workspace = true, optional = true }

# GPU types (optional, for wgpu conversions)
# TODO(ARC-011): This optional wgpu dependency belongs in par-term-render, not par-term-config.
# par-term-config is a pure data/config crate and should not know about GPU types.
# Migration plan: move WgpuColor/wgpu conversion helpers to par-term-render and update
# any callers that currently use par_term_config's wgpu-types feature.
# Blocked on: identifying all call sites that rely on par_term_config's wgpu re-exports.
wgpu = { workspace = true, optional = true }

# Mutex for watcher
parking_lot.workspace = true

# Hostname detection for snippet variables
hostname.workspace = true

# Terminal emulator core (required for RestartPolicy, TriggerAction conversion methods in automation.rs)
# ARC-003 NOTE: UnicodeVersion/AmbiguousWidth/NormalizationForm now use native types.
# The remaining emu-core usage is in automation.rs for trigger/coprocess conversion methods.
# A future refactor should move those conversion methods to par-term-terminal as well.
par-term-emu-core-rust.workspace = true

[features]
default = ["watcher"]
watcher = ["notify"]
wgpu-types = ["wgpu"]

[dev-dependencies]
tempfile.workspace = true
