[package]
name = "par-term-fonts"
version = "0.1.7"
edition = "2024"
rust-version = "1.91"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Font management and text shaping for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "font", "text-shaping"]
categories = ["text-processing"]

[dependencies]
# Font rasterization with colored glyph support
swash.workspace = true

# Font database for system font discovery and fallback
fontdb.workspace = true

# HarfBuzz text shaping for ligatures and complex scripts
rustybuzz.workspace = true

# Grapheme cluster detection for proper text boundaries
unicode-segmentation.workspace = true

# LRU cache for text shaping results
lru.workspace = true

# Configuration types (FontRange)
par-term-config = { path = "../par-term-config", version = "0.10.0" }

# Error handling
anyhow.workspace = true

# Logging
log.workspace = true
