[package]
name = "par-term-input"
version = "0.1.6"
edition = "2024"
rust-version = "1.91"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Input sequence generation for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "input", "keyboard", "escape-sequences"]
categories = ["command-line-utilities"]

[dependencies]
# Configuration types (OptionKeyMode)
par-term-config = { path = "../par-term-config", version = "0.7.1" }

# Clipboard access
arboard.workspace = true

# Window and key event types
winit.workspace = true

# Logging
log.workspace = true
