[package]
name = "par-term-keybindings"
version = "0.1.8"
edition = "2024"
rust-version = "1.91"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Keybinding system for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "keybindings", "keyboard"]
categories = ["gui"]

[dependencies]
# Configuration types (KeyBinding, ModifierRemapping)
par-term-config = { path = "../par-term-config", version = "0.8.0" }

# Window and input event types
winit.workspace = true

# Logging
log.workspace = true
