[package]
name = "par-term-mcp"
version = "0.2.3"
edition = "2024"
rust-version = "1.94"
authors = ["Paul Robello <probello@gmail.com>"]
description = "MCP (Model Context Protocol) stdio server for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "mcp", "json-rpc", "stdio"]
categories = ["command-line-utilities"]

[dependencies]
# JSON serialization for JSON-RPC protocol
serde.workspace = true
serde_json.workspace = true

# Logging
log.workspace = true

# Platform-specific directories for config path resolution
dirs.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
